hphp/hack/test/typecheck/magic_get.php.exp
File "magic_get.php", line 4, characters 3-17:
Magic __get methods are no longer supported (Parsing[1002])
