hphp/hack/test/typecheck/magic_get.php
<?hh

class C {
  function __get() {}
}
